--- a/src/components/ProductsList/ProductsListItem.scss
+++ b/src/components/ProductsList/ProductsListItem.scss
@@ -22,3 +22,21 @@
     display: flex;
     justify-content: center;
 }
+.product-image{
+    text-align: center;
+    margin-bottom: 20px;
+    img{
+        width: 150px;
+        height: auto;
+    }
+}
+.red{
+    color:red;
+}
+.product-quantity{
+    display: flex;
+    justify-content: center;
+    input{
+        text-align: center;
+    }
+}
